--- a/KickboxingCombinations/Base.lproj/Main.storyboard
+++ b/KickboxingCombinations/Base.lproj/Main.storyboard
@@ -40,25 +40,25 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" # of Rounds:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4eC-6F-1Nc">
-                                <rect key="frame" x="36" y="179" width="118" height="24"/>
+                                <rect key="frame" x="36" y="164" width="118" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Round Duration:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eo8-2v-eJO">
-                                <rect key="frame" x="36" y="274" width="144" height="24"/>
+                                <rect key="frame" x="36" y="234" width="144" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rest:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gx4-f7-oKv">
-                                <rect key="frame" x="36" y="369" width="46" height="24"/>
+                                <rect key="frame" x="36" y="304" width="46" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Warning Bell:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="htE-7m-R9b">
-                                <rect key="frame" x="36" y="464" width="117" height="24"/>
+                                <rect key="frame" x="36" y="374" width="117" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -67,43 +67,43 @@
                                 <rect key="frame" x="470" y="128" width="94" height="29"/>
                             </stepper>
                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="say-cA-ywJ">
-                                <rect key="frame" x="470" y="223" width="94" height="29"/>
+                                <rect key="frame" x="470" y="198" width="94" height="29"/>
                             </stepper>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#ofRounds" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xfb-eQ-hQv">
-                                <rect key="frame" x="56" y="223" width="84" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RoundTime" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJ4-W0-1T6">
-                                <rect key="frame" x="56" y="318" width="89" height="21"/>
+                                <rect key="frame" x="56" y="268" width="89" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="OW8-IQ-t1H">
-                                <rect key="frame" x="470" y="318" width="94" height="29"/>
+                                <rect key="frame" x="470" y="268" width="94" height="29"/>
                             </stepper>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RestTime" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rqG-dD-JWw">
-                                <rect key="frame" x="56" y="413" width="73" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="EdN-TG-34u">
-                                <rect key="frame" x="470" y="413" width="94" height="29"/>
+                                <rect key="frame" x="470" y="338" width="94" height="29"/>
                             </stepper>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WarningBell" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f2x-1B-cl5">
-                                <rect key="frame" x="56" y="508" width="92" height="21"/>
+                                <rect key="frame" x="56" y="408" width="92" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="ohN-AZ-kdf">
-                                <rect key="frame" x="470" y="508" width="94" height="29"/>
+                                <rect key="frame" x="470" y="408" width="94" height="29"/>
                             </stepper>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RestTime" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rqG-dD-JWw">
+                                <rect key="frame" x="56" y="338" width="73" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#ofRounds" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xfb-eQ-hQv">
+                                <rect key="frame" x="56" y="198" width="84" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WorkoutType" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kuc-eM-5A5">
-                                <rect key="frame" x="56" y="128" width="100" height="21"/>
+                                <rect key="frame" x="46" y="128" width="100" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -113,43 +113,53 @@
                         <constraints>
                             <constraint firstItem="fyA-qa-2BR" firstAttribute="leading" secondItem="eo8-2v-eJO" secondAttribute="leading" id="3xM-o2-eDn"/>
                             <constraint firstItem="OW8-IQ-t1H" firstAttribute="leading" secondItem="say-cA-ywJ" secondAttribute="leading" id="AHX-IR-mDb"/>
-                            <constraint firstItem="kuc-eM-5A5" firstAttribute="leading" secondItem="fyA-qa-2BR" secondAttribute="leading" constant="20" id="CML-Ef-HFF"/>
+                            <constraint firstItem="kuc-eM-5A5" firstAttribute="leading" secondItem="fyA-qa-2BR" secondAttribute="leading" constant="10" id="CML-Ef-HFF"/>
                             <constraint firstItem="OW8-IQ-t1H" firstAttribute="top" secondItem="PJ4-W0-1T6" secondAttribute="top" id="Doz-2V-7Q4"/>
                             <constraint firstItem="say-cA-ywJ" firstAttribute="leading" secondItem="RFV-pI-Jgs" secondAttribute="leading" id="JN9-8X-eEH"/>
                             <constraint firstItem="htE-7m-R9b" firstAttribute="leading" secondItem="fyA-qa-2BR" secondAttribute="leading" id="JoY-L9-S47"/>
                             <constraint firstItem="f2x-1B-cl5" firstAttribute="top" secondItem="ohN-AZ-kdf" secondAttribute="top" id="O9O-R5-uhW"/>
-                            <constraint firstItem="4eC-6F-1Nc" firstAttribute="top" secondItem="kuc-eM-5A5" secondAttribute="bottom" constant="30" id="Pmf-RL-ca9"/>
+                            <constraint firstItem="4eC-6F-1Nc" firstAttribute="top" secondItem="kuc-eM-5A5" secondAttribute="bottom" constant="15" id="Pmf-RL-ca9"/>
                             <constraint firstItem="ohN-AZ-kdf" firstAttribute="leading" secondItem="EdN-TG-34u" secondAttribute="leading" id="RDa-DQ-Rje"/>
-                            <constraint firstItem="PJ4-W0-1T6" firstAttribute="top" secondItem="eo8-2v-eJO" secondAttribute="bottom" constant="20" id="TQW-Uo-hil"/>
+                            <constraint firstItem="PJ4-W0-1T6" firstAttribute="top" secondItem="eo8-2v-eJO" secondAttribute="bottom" constant="10" id="TQW-Uo-hil">
+                                <variation key="heightClass=compact-widthClass=compact" constant="5"/>
+                            </constraint>
                             <constraint firstItem="eo8-2v-eJO" firstAttribute="leading" secondItem="PJ4-W0-1T6" secondAttribute="leading" constant="-20" id="Ujd-K1-4ck"/>
-                            <constraint firstItem="kuc-eM-5A5" firstAttribute="top" secondItem="fyA-qa-2BR" secondAttribute="bottom" constant="20" id="VXJ-q3-11G"/>
+                            <constraint firstItem="kuc-eM-5A5" firstAttribute="top" secondItem="fyA-qa-2BR" secondAttribute="bottom" constant="20" id="VXJ-q3-11G">
+                                <variation key="heightClass=compact-widthClass=compact" constant="5"/>
+                            </constraint>
                             <constraint firstItem="gx4-f7-oKv" firstAttribute="leading" secondItem="fyA-qa-2BR" secondAttribute="leading" id="XrI-OS-ycg"/>
-                            <constraint firstItem="RFV-pI-Jgs" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="kuc-eM-5A5" secondAttribute="trailing" constant="80" id="bZU-8k-g0h"/>
-                            <constraint firstItem="rqG-dD-JWw" firstAttribute="top" secondItem="gx4-f7-oKv" secondAttribute="bottom" constant="20" id="bhq-za-Igf"/>
-                            <constraint firstItem="Xfb-eQ-hQv" firstAttribute="top" secondItem="4eC-6F-1Nc" secondAttribute="bottom" constant="20" id="cOq-Ah-LuK"/>
-                            <constraint firstItem="fyA-qa-2BR" firstAttribute="top" secondItem="MyX-hX-Jqz" secondAttribute="bottom" constant="20" id="fLY-Kc-U8E"/>
+                            <constraint firstItem="rqG-dD-JWw" firstAttribute="top" secondItem="gx4-f7-oKv" secondAttribute="bottom" constant="10" id="bhq-za-Igf">
+                                <variation key="heightClass=compact-widthClass=compact" constant="5"/>
+                            </constraint>
+                            <constraint firstItem="Xfb-eQ-hQv" firstAttribute="top" secondItem="4eC-6F-1Nc" secondAttribute="bottom" constant="10" id="cOq-Ah-LuK">
+                                <variation key="heightClass=compact-widthClass=compact" constant="5"/>
+                            </constraint>
+                            <constraint firstItem="fyA-qa-2BR" firstAttribute="top" secondItem="MyX-hX-Jqz" secondAttribute="bottom" constant="20" id="fLY-Kc-U8E">
+                                <variation key="heightClass=compact-widthClass=compact" constant="5"/>
+                            </constraint>
                             <constraint firstItem="OW8-IQ-t1H" firstAttribute="leading" secondItem="EdN-TG-34u" secondAttribute="leading" id="i3Y-Mi-YJE"/>
                             <constraint firstItem="EdN-TG-34u" firstAttribute="top" secondItem="rqG-dD-JWw" secondAttribute="top" id="i53-RU-lYA"/>
                             <constraint firstItem="gx4-f7-oKv" firstAttribute="leading" secondItem="rqG-dD-JWw" secondAttribute="leading" constant="-20" id="ia0-u5-WyD"/>
-                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="RFV-pI-Jgs" secondAttribute="trailing" constant="20" id="kmP-gr-dzd"/>
                             <constraint firstItem="f2x-1B-cl5" firstAttribute="leading" secondItem="htE-7m-R9b" secondAttribute="leading" constant="20" id="mFY-p7-z9M"/>
-                            <constraint firstItem="htE-7m-R9b" firstAttribute="top" secondItem="rqG-dD-JWw" secondAttribute="bottom" constant="30" id="mbl-IS-bj6"/>
+                            <constraint firstItem="htE-7m-R9b" firstAttribute="top" secondItem="rqG-dD-JWw" secondAttribute="bottom" constant="15" id="mbl-IS-bj6">
+                                <variation key="heightClass=compact-widthClass=compact" constant="8"/>
+                            </constraint>
                             <constraint firstItem="4eC-6F-1Nc" firstAttribute="leading" secondItem="Xfb-eQ-hQv" secondAttribute="leading" constant="-20" id="pFS-ec-iNm"/>
-                            <constraint firstItem="f2x-1B-cl5" firstAttribute="top" secondItem="htE-7m-R9b" secondAttribute="bottom" constant="20" id="vPf-fk-VVK"/>
+                            <constraint firstItem="f2x-1B-cl5" firstAttribute="top" secondItem="htE-7m-R9b" secondAttribute="bottom" constant="10" id="vPf-fk-VVK">
+                                <variation key="heightClass=compact-widthClass=compact" constant="5"/>
+                            </constraint>
                             <constraint firstItem="say-cA-ywJ" firstAttribute="top" secondItem="Xfb-eQ-hQv" secondAttribute="top" id="w0y-Pl-MMg"/>
-                            <constraint firstItem="eo8-2v-eJO" firstAttribute="top" secondItem="Xfb-eQ-hQv" secondAttribute="bottom" constant="30" id="xR7-MD-Ig3"/>
+                            <constraint firstItem="eo8-2v-eJO" firstAttribute="top" secondItem="Xfb-eQ-hQv" secondAttribute="bottom" constant="15" id="xR7-MD-Ig3">
+                                <variation key="heightClass=compact-widthClass=compact" constant="8"/>
+                            </constraint>
                             <constraint firstItem="4eC-6F-1Nc" firstAttribute="leading" secondItem="fyA-qa-2BR" secondAttribute="leading" id="xaQ-kV-nB9"/>
                             <constraint firstItem="RFV-pI-Jgs" firstAttribute="top" secondItem="kuc-eM-5A5" secondAttribute="top" id="xxN-Dn-lpu"/>
                             <constraint firstItem="fyA-qa-2BR" firstAttribute="leading" secondItem="3OU-Yd-dfL" secondAttribute="leadingMargin" constant="20" id="ycy-4M-31Q"/>
                             <constraint firstAttribute="trailingMargin" secondItem="RFV-pI-Jgs" secondAttribute="trailing" constant="20" id="zpU-bH-EGl"/>
-                            <constraint firstItem="gx4-f7-oKv" firstAttribute="top" secondItem="PJ4-W0-1T6" secondAttribute="bottom" constant="30" id="zwX-R7-kPd"/>
+                            <constraint firstItem="gx4-f7-oKv" firstAttribute="top" secondItem="PJ4-W0-1T6" secondAttribute="bottom" constant="15" id="zwX-R7-kPd">
+                                <variation key="heightClass=compact-widthClass=compact" constant="8"/>
+                            </constraint>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="bZU-8k-g0h"/>
-                                <exclude reference="kmP-gr-dzd"/>
-                            </mask>
-                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Setup Your Workout" id="BRE-8G-EoX"/>
                 </viewController>
